<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Location API Demo</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="txt_connection_status">"Connection Status: "</string>
    <string name="txt_location">"Location: "</string>
    <string name="txt_btn_refresh">Refresh</string>
    <string name="txt_btn_start_update">Start Update</string>
    <string name="txt_btn_stop_update">Stop Update</string>
    <string name="txt_address">"Address: "</string>
    <string name="txt_btn_place_marker">Place Marker</string>
    <string name="txt_btn_request_for_pendingintent">Request for PendingIntent</string>

</resources>
